--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,4 +21,12 @@ jobs:
         run:
           python -m pip install --upgrade pip 
           pip install -r requirements.txt
-          
+      - name: Check docker install or not
+        run: docker run hello-world
+      - name: Push to docker hub
+        users: docker/build-push-action/@v1
+        with: 
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+          repository: ${{secrets.DOCKERHUB_REPO}}
+          tag_with_ref: true 
