--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Check docker install or not
         run: docker run hello-world
       - name: Push to docker hub
-        users: docker/build-push-action/@v1
+        uses: docker/build-push-action/@v1
         with: 
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
