--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,12 +21,12 @@ jobs:
         run:
           python -m pip install --upgrade pip 
           pip install -r requirements.txt
-      - name: Check docker install or not
-        run: docker run hello-world
+      - name: Login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{env.DOCKER_USERNAME}}
+          password: ${{env.DOCKER_PASSWORD}}
       - name: Push to docker hub
         uses: docker/build-push-action/@v2
         with: 
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
-          repository: ${{secrets.DOCKERHUB_REPO}}
-          tags: ${{secrets.DOCKER_USERNAME}}/flaskdrinks:latest
+          tags: ${{env.DOCKER_USERNAME}}/flaskdrinks:latest
