--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Login to docker hub
         uses: docker/login-action@v2
         with:
-          username: ${{env.DOCKER_USERNAME}}
-          password: ${{env.DOCKER_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: Push to docker hub
         uses: docker/build-push-action/@v2
         with: 
-          tags: ${{env.DOCKER_USERNAME}}/flaskdrinks:latest
+          tags: ${{secrets.DOCKER_USERNAME}}/flaskdrinks:latest
