--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,13 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
-      - name: Push to docker hub
+      - name: Setup Docker Building 
+        uses: docker/setup-buildx-action@v1
+      - name: Build and Push
         uses: docker/build-push-action/@v2
         with: 
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
           tags: ${{secrets.DOCKER_USERNAME}}/flaskdrinks:latest
